--- a/index.html
+++ b/index.html
@@ -3,108 +3,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>篩選和顯示資料</title>
+    <title>星骰篩選網頁</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-        .display-area { display: flex; justify-content: space-around; margin-top: 20px; }
-        .data-card { border: 1px solid #ddd; padding: 10px; width: 23%; text-align: center; }
-        .data-card h4 { font-size: 1.2em; }
-        select { margin: 5px; }
+        .result-area {
+            margin-top: 20px;
+            padding: 15px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+        }
     </style>
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">篩選資料範例</h1>
+        <h1 class="text-center">星骰篩選系統</h1>
 
-        <!-- 下拉選單區 -->
-        <div class="form-row">
-            <div class="form-group col-md-3">
-                <label for="filter1">篩選條件 1</label>
-                <select id="filter1" class="form-control">
-                    <option value="">所有</option>
-                    <option value="範例選項A">範例選項A</option>
-                    <option value="範例選項B">範例選項B</option>
+        <!-- Filter Section -->
+        <div class="row mt-4">
+            <div class="col-md-3">
+                <label for="zodiac">星座</label>
+                <select id="zodiac" class="form-control">
+                    <option value="">選擇星座</option>
+                    <!-- Add zodiac options here -->
                 </select>
             </div>
-            <div class="form-group col-md-3">
-                <label for="filter2">篩選條件 2</label>
-                <select id="filter2" class="form-control">
-                    <option value="">所有</option>
-                    <option value="範例選項X">範例選項X</option>
-                    <option value="範例選項Y">範例選項Y</option>
+            <div class="col-md-3">
+                <label for="planet">星球</label>
+                <select id="planet" class="form-control">
+                    <option value="">選擇星球</option>
+                    <!-- Add planet options here -->
                 </select>
             </div>
-            <div class="form-group col-md-3">
-                <label for="filter3">篩選條件 3</label>
-                <select id="filter3" class="form-control">
-                    <option value="">所有</option>
-                    <option value="範例選項1">範例選項1</option>
-                    <option value="範例選項2">範例選項2</option>
+            <div class="col-md-3">
+                <label for="gender">性別</label>
+                <select id="gender" class="form-control">
+                    <option value="">選擇性別</option>
+                    <option value="male">男性</option>
+                    <option value="female">女性</option>
                 </select>
             </div>
-            <div class="form-group col-md-3">
-                <label for="filter4">篩選條件 4</label>
-                <select id="filter4" class="form-control">
-                    <option value="">所有</option>
-                    <option value="範例選項A1">範例選項A1</option>
-                    <option value="範例選項B2">範例選項B2</option>
+            <div class="col-md-3">
+                <label for="house">宮位</label>
+                <select id="house" class="form-control">
+                    <option value="">選擇宮位</option>
+                    <!-- Add house options here -->
                 </select>
             </div>
         </div>
 
-        <!-- 資料顯示區 -->
-        <div class="display-area">
-            <div class="data-card" id="data1"><h4>資料 1</h4><p>顯示區</p></div>
-            <div class="data-card" id="data2"><h4>資料 2</h4><p>顯示區</p></div>
-            <div class="data-card" id="data3"><h4>資料 3</h4><p>顯示區</p></div>
-            <div class="data-card" id="data4"><h4>資料 4</h4><p>顯示區</p></div>
+        <!-- Result Areas -->
+        <div class="result-area" id="symbolArea">
+            <h4>宮位象徵篩選後顯示區</h4>
+            <div id="symbolResult">請選擇條件後顯示內容。</div>
+        </div>
+
+        <div class="result-area" id="nodeEffectArea">
+            <h4>南北交點影響的顯示區</h4>
+            <div id="nodeEffectResult">請選擇條件後顯示內容。</div>
+        </div>
+
+        <div class="result-area" id="mainRecommendationArea">
+            <h4>主推薦商品篩選後顯示區</h4>
+            <div id="mainRecommendationResult">請選擇條件後顯示內容。</div>
+        </div>
+
+        <div class="result-area" id="suggestionArea">
+            <h4>建議商品篩選後顯示區</h4>
+            <div id="suggestionResult">請選擇條件後顯示內容。</div>
         </div>
     </div>
 
     <script>
-        // 假設的資料（從星骰data分頁內的資料）
+        // 假設 data 是從 "data" 工作表中取得的資料範例
         const data = [
-            {id: 1, name: "範例資料1", type1: "範例選項A", type2: "範例選項X", type3: "範例選項1", type4: "範例選項A1"},
-            {id: 2, name: "範例資料2", type1: "範例選項B", type2: "範例選項Y", type3: "範例選項2", type4: "範例選項B2"},
-            {id: 3, name: "範例資料3", type1: "範例選項A", type2: "範例選項X", type3: "範例選項1", type4: "範例選項A1"},
-            {id: 4, name: "範例資料4", type1: "範例選項B", type2: "範例選項Y", type3: "範例選項2", type4: "範例選項B2"}
+            { zodiac: "牡羊座", planet: "火星", gender: "male", house: "第一宮", symbol: "自我與外貌", nodeEffect: "積極與挑戰", mainProduct: "紅色水晶", suggestedProduct: "運動裝" },
+            { zodiac: "金牛座", planet: "金星", gender: "female", house: "第二宮", symbol: "財富與資源", nodeEffect: "穩定與安全", mainProduct: "翡翠項鍊", suggestedProduct: "舒適家居用品" },
+            // Add more data rows here
         ];
 
-        // 監聽篩選選單變化
-        document.querySelectorAll("select").forEach(select => {
-            select.addEventListener("change", filterData);
-        });
+        // 動態生成篩選選項
+        const zodiacSelect = document.getElementById("zodiac");
+        const planetSelect = document.getElementById("planet");
+        const houseSelect = document.getElementById("house");
 
+        // 獲取唯一的星座、星球、宮位值來填充選單
+        const zodiacs = [...new Set(data.map(d => d.zodiac))];
+        const planets = [...new Set(data.map(d => d.planet))];
+        const houses = [...new Set(data.map(d => d.house))];
+
+        zodiacs.forEach(z => zodiacSelect.innerHTML += `<option value="${z}">${z}</option>`);
+        planets.forEach(p => planetSelect.innerHTML += `<option value="${p}">${p}</option>`);
+        houses.forEach(h => houseSelect.innerHTML += `<option value="${h}">${h}</option>`);
+
+        // 篩選並顯示結果
         function filterData() {
-            // 取得每個選單的篩選條件
-            const filter1 = document.getElementById("filter1").value;
-            const filter2 = document.getElementById("filter2").value;
-            const filter3 = document.getElementById("filter3").value;
-            const filter4 = document.getElementById("filter4").value;
+            const selectedZodiac = zodiacSelect.value;
+            const selectedPlanet = planetSelect.value;
+            const selectedGender = document.getElementById("gender").value;
+            const selectedHouse = houseSelect.value;
 
-            // 根據篩選條件篩選資料
-            const filteredData = data.filter(item => {
-                return (!filter1 || item.type1 === filter1) &&
-                       (!filter2 || item.type2 === filter2) &&
-                       (!filter3 || item.type3 === filter3) &&
-                       (!filter4 || item.type4 === filter4);
-            });
+            const filteredData = data.find(d => 
+                (selectedZodiac === "" || d.zodiac === selectedZodiac) &&
+                (selectedPlanet === "" || d.planet === selectedPlanet) &&
+                (selectedGender === "" || d.gender === selectedGender) &&
+                (selectedHouse === "" || d.house === selectedHouse)
+            );
 
-            // 更新顯示區
-            for (let i = 1; i <= 4; i++) {
-                const dataCard = document.getElementById(`data${i}`);
-                const item = filteredData[i - 1];
-                if (item) {
-                    dataCard.innerHTML = `<h4>${item.name}</h4><p>${item.type1}, ${item.type2}, ${item.type3}, ${item.type4}</p>`;
-                } else {
-                    dataCard.innerHTML = "<h4>無資料</h4><p>顯示區</p>";
-                }
-            }
+            // 顯示篩選結果
+            document.getElementById("symbolResult").textContent = filteredData ? filteredData.symbol : "無符合條件的結果";
+            document.getElementById("nodeEffectResult").textContent = filteredData ? filteredData.nodeEffect : "無符合條件的結果";
+            document.getElementById("mainRecommendationResult").textContent = filteredData ? filteredData.mainProduct : "無符合條件的結果";
+            document.getElementById("suggestionResult").textContent = filteredData ? filteredData.suggestedProduct : "無符合條件的結果";
         }
 
-        // 初始化顯示區
-        filterData();
+        // 綁定下拉選單的篩選事件
+        document.querySelectorAll("select").forEach(select => select.addEventListener("change", filterData));
     </script>
 </body>
 </html>
-
