--- a/index.html
+++ b/index.html
@@ -55,16 +55,35 @@
         <form>
             <label for="constellation">星座</label>
             <select id="constellation">
-                <option value="雙魚座">雙魚座</option>
-                <option value="牡羊座">牡羊座</option>
-                <option value="金牛座">金牛座</option>
+                <option value="牡羊座♈︎">牡羊座♈︎</option>
+                <option value="金牛座♉︎">金牛座♉︎</option>
+                <option value="雙子座♊︎">雙子座♊︎</option>
+                <option value="巨蟹座♋︎">巨蟹座♋︎</option>
+                <option value="獅子座♌︎">獅子座♌︎</option>
+                <option value="處女座♍︎">處女座♍︎</option>
+                <option value="天秤座♎︎">天秤座♎︎</option>
+                <option value="天蠍座♏︎">天蠍座♏︎</option>
+                <option value="射手座♐︎">射手座♐︎</option>
+                <option value="摩羯座♑︎">摩羯座♑︎</option>
+                <option value="水瓶座♒︎">水瓶座♒︎</option>
+                <option value="雙魚座♓︎">雙魚座♓︎</option>
                 <!-- Add other options as needed -->
             </select>
 
             <label for="planet">星球</label>
             <select id="planet">
-                <option value="北交點">北交點</option>
-                <option value="南交點">南交點</option>
+                <option value="太陽☉">太陽☉</option>
+                <option value="月亮☽︎">月亮☽︎</option>
+                <option value="水星☿">水星☿</option>
+                <option value="金星♀">金星♀</option>
+                <option value="火星♂">火星♂</option>
+                <option value="木星♃">木星♃</option>
+                <option value="土星♄">土星♄</option>
+                <option value="天王星♅">天王星♅</option>
+                <option value="海王星♆">海王星♆</option>
+                <option value="冥王星">冥王星</option>
+                <option value="北交點☊">北交點☊</option>
+                <option value="南交點☋">南交點☋</option>
                 <!-- Add other options as needed -->
             </select>
 
@@ -78,6 +97,16 @@
             <select id="position">
                 <option value="1">1</option>
                 <option value="2">2</option>
+                <option value="3">2</option>
+                <option value="4">2</option>
+                <option value="5">2</option>
+                <option value="6">2</option>
+                <option value="7">2</option>
+                <option value="8">2</option>
+                <option value="9">2</option>
+                <option value="10">2</option>
+                <option value="11">2</option>
+                <option value="12">2</option>
                 <!-- Add other options as needed -->
             </select>
         </form>
@@ -86,24 +115,14 @@
     <div class="recommend-container">
         <h2>推薦商品</h2>
         <ul class="suggested-products">
-            <li>臨之花風味黑巧克力70%</li>
-            <li>多明尼加黑巧克力70%</li>
-            <li>ORIGIN #1 黑巧克力70%</li>
-            <li>大馬士革玫瑰黑巧克力70%</li>
+            <li></li>
+            
         </ul>
 
         <h3>建議商品</h3>
         <ul class="product-list">
-            <li>大馬士革玫瑰黑巧克力70%</li>
-            <li>台東洛神花白巧克力36%</li>
-            <li>台灣櫻花黑香醇黑牛奶巧克力50%</li>
-            <li>紅鳥龍牛奶巧克力50%</li>
-            <li>秘魯牛奶巧克力50%</li>
-            <li>秘魯黑巧克力100%</li>
-            <li>秘魯黑巧克力85%</li>
-            <li>真布粉紅玫瑰風味黑巧克力70%</li>
-            <li>深烘咖啡風味黑巧克力70%</li>
-            <li>輕烘咖啡風味黑巧克力70%</li>
+            <li></li>
+
         </ul>
     </div>
 </div>
