--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <form>
             <label for="constellation">星座</label>
             <select id="constellation">
+                <option value="">請選擇</option>
                 <option value="牡羊座♈︎">牡羊座♈︎</option>
                 <option value="金牛座♉︎">金牛座♉︎</option>
                 <option value="雙子座♊︎">雙子座♊︎</option>
