--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
             <label for="planet">星球</label>
             <select id="planet">
+                <option value="">請選擇</option>
                 <option value="太陽☉">太陽☉</option>
                 <option value="月亮☽︎">月亮☽︎</option>
                 <option value="水星☿">水星☿</option>
@@ -90,12 +91,14 @@
 
             <label for="gender">性別</label>
             <select id="gender">
+                <option value="">請選擇</option>
                 <option value="女">女</option>
                 <option value="男">男</option>
             </select>
 
             <label for="position">宮位</label>
             <select id="position">
+                <option value="">請選擇</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">2</option>
