--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
             display: flex;
             flex-direction: row;
             gap: 40px;
+            flex-wrap: wrap; /* 支援行內換行 */
         }
         .form-container, .recommend-container {
             flex: 1;
+            min-width: 300px; /* 避免過小的寬度 */
         }
         select, input[type="text"] {
             width: 100%;
@@ -25,12 +27,7 @@
             border: 1px solid #ccc;
             border-radius: 4px;
         }
-        .form-container {
-            border: 1px solid #ccc;
-            padding: 20px;
-            border-radius: 8px;
-        }
-        .recommend-container {
+        .form-container, .recommend-container {
             border: 1px solid #ccc;
             padding: 20px;
             border-radius: 8px;
@@ -44,6 +41,13 @@
         }
         .product-list li, .suggested-products li {
             margin: 8px 0;
+        }
+
+        /* Media Query for responsive design */
+        @media (max-width: 768px) {
+            .container {
+                flex-direction: column;
+            }
         }
     </style>
 </head>
@@ -68,7 +72,6 @@
                 <option value="摩羯座♑︎">摩羯座♑︎</option>
                 <option value="水瓶座♒︎">水瓶座♒︎</option>
                 <option value="雙魚座♓︎">雙魚座♓︎</option>
-                <!-- Add other options as needed -->
             </select>
 
             <label for="planet">星球</label>
@@ -86,7 +89,6 @@
                 <option value="冥王星">冥王星</option>
                 <option value="北交點☊">北交點☊</option>
                 <option value="南交點☋">南交點☋</option>
-                <!-- Add other options as needed -->
             </select>
 
             <label for="gender">性別</label>
@@ -111,7 +113,6 @@
                 <option value="10">10</option>
                 <option value="11">11</option>
                 <option value="12">12</option>
-                <!-- Add other options as needed -->
             </select>
         </form>
     </div>
@@ -120,13 +121,11 @@
         <h2>推薦商品</h2>
         <ul class="suggested-products">
             <li></li>
-            
         </ul>
 
         <h3>建議商品</h3>
         <ul class="product-list">
             <li></li>
-
         </ul>
     </div>
 </div>
