--- a/index.html
+++ b/index.html
@@ -118,12 +118,22 @@
     </div>
 
     <div class="recommend-container">
-        <h2>推薦商品</h2>
+        <h2>南北交點影響</h2>
         <ul class="suggested-products">
             <li></li>
         </ul>
 
-        <h3>建議商品</h3>
+        <h3>宮位象徵</h3>
+        <ul class="product-list">
+            <li></li>
+        </ul>
+
+        <h4>推薦商品</h4>
+        <ul class="suggested-products">
+            <li></li>
+        </ul>
+
+        <h5>建議商品</h5>
         <ul class="product-list">
             <li></li>
         </ul>
