--- a/index.html
+++ b/index.html
@@ -119,21 +119,22 @@
 
     <div class="recommend-container">
         <h2>南北交點影響</h2>
+        <h3>南北交點影響</h3>
         <ul class="suggested-products">
             <li></li>
         </ul>
 
-        <h3>宮位象徵</h3>
+        <h4>宮位象徵</h4>
         <ul class="product-list">
             <li></li>
         </ul>
 
-        <h4>推薦商品</h4>
+        <h5>推薦商品</h5>
         <ul class="suggested-products">
             <li></li>
         </ul>
 
-        <h5>建議商品</h5>
+        <h6>建議商品</h6>
         <ul class="product-list">
             <li></li>
         </ul>
