--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>表單示範</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: Microsoft JhengHei;
             line-height: 1.6;
             margin: 20px;
         }
@@ -41,6 +41,12 @@
         }
         .product-list li, .suggested-products li {
             margin: 8px 0;
+        }
+
+        /* 統一樣式的標題設定 */
+        .unified-title {
+            font-size: 15px;
+            font-weight: bold;
         }
 
         /* Media Query for responsive design */
