--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <div class="container">
     <div class="form-container">
-        <h2>個人資訊</h2>
+        <h2>選擇資訊</h2>
         <form>
             <label for="constellation">星座</label>
             <select id="constellation">
@@ -124,7 +124,7 @@
     </div>
 
     <div class="recommend-container">
-        <h2>南北交點影響</h2>
+        <h2>查詢結果</h2>
         <h3>南北交點影響</h3>
         <ul class="suggested-products">
             <li></li>
