--- a/index.html
+++ b/index.html
@@ -125,22 +125,22 @@
 
     <div class="recommend-container">
         <h2>查詢結果</h2>
-        <h3>南北交點影響</h3>
+        <h3 class="unified-title">南北交點影響</h3>
         <ul class="suggested-products">
             <li></li>
         </ul>
 
-        <h4>宮位象徵</h4>
+        <h4 class="unified-title">宮位象徵</h4>
         <ul class="product-list">
             <li></li>
         </ul>
 
-        <h5>推薦商品</h5>
+        <h5 class="unified-title">推薦商品</h5>
         <ul class="suggested-products">
             <li></li>
         </ul>
 
-        <h6>建議商品</h6>
+        <h6 class="unified-title">建議商品</h6>
         <ul class="product-list">
             <li></li>
         </ul>
