--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <div class="container">
     <div class="form-container">
         <h2>選擇資訊</h2>
-        <form>
+        <form id="selectionForm">
             <label for="constellation">星座</label>
             <select id="constellation">
                 <option value="">請選擇</option>
