--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         const uniqueProducts = [...new Set(recommendedProducts)];
 
         uniqueProducts.forEach(item => {
-            document.getElementById('suggestedProductsList').innerHTML += `<li>${item}</li>`;
+            document.getElementById('recommendedProductsList').innerHTML += `<li>${item}</li>`;
         });
 
         // 推薦商品，僅重複項目顯示紅色
