--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         if (planet === "北交點☊" && constellation) {
             document.getElementById('nodeEffectList').innerHTML = `<li>${data.nodeEffects["北交點☊"]} ${constellation}</li>`;
         } else if (planet === "南交點☋" && constellation) {
-            document.getElementById('nodeEffectList').innerHTML = `<li>${data.nodeEffects["南交點☋"]} ${constellation}</li>`;
+            document.getElementById('nodeEffectList').innerHTML = `<li>${data.oppositeSigns["南交點☋"]} ${constellation}</li>`;
         }
 
         // 宮位象徵
