--- a/index.html
+++ b/index.html
@@ -230,9 +230,11 @@
             const oppositeSign = data.oppositeSigns[constellation];  // 獲取對宮星座
             document.getElementById('nodeEffectList').innerHTML = `<li>應該捨棄 ${constellation} 需要開發 ${oppositeSign}</li>`;
 
-            // 顯示對宮星座的推薦商品
+            // 顯示對宮星座的推薦商品，去重
             if (oppositeSign && data.recommendedProducts[oppositeSign]) {
-                data.recommendedProducts[oppositeSign].forEach(item => {
+                // 去重顯示對宮星座商品
+                const uniqueItems = [...new Set(data.recommendedProducts[oppositeSign])];
+                uniqueItems.forEach(item => {
                     document.getElementById('recommendedProductsList').innerHTML += `<li>${item}</li>`;
                 });
             }
@@ -254,12 +256,14 @@
 
         // 如果星座和星球都被選擇，將兩者的商品合併並去重
         if (constellation && planet) {
+            // 如果星球是南交點☋，則只顯示對宮星座商品，不顯示原選星座商品
             if (planet === "南交點☋") {
-                // 當星球為南交點☋時，只顯示對宮星座的商品，不顯示原本選擇的星座商品
                 const oppositeSign = data.oppositeSigns[constellation];  // 獲取對宮星座
-                recommendedItems = data.recommendedProducts[oppositeSign] || [];
+                if (oppositeSign && data.recommendedProducts[oppositeSign]) {
+                    recommendedItems = [...new Set(data.recommendedProducts[oppositeSign])];  // 去重顯示對宮星座商品
+                }
             } else {
-                // 合併星座和星球的商品並去重
+                // 如果是其他星球，則合併星座和星球商品
                 let constellationProducts = data.recommendedProducts[constellation] || [];
                 let planetProducts = data.planetProducts[planet] || [];
 
